# n00tropic-cerebrum

./: .gitignore  .gitmodules  .isort.cfg  .lintstagedrc.json  .lychee.toml  .npmrc  .pnpmrc  .pre-commit-config.yaml  .prettierignore  .vale.ini  .vale.local.ini  .valeignore  AGENTS.md  CONTRIBUTING-docs.adoc  CONTRIBUTING.md  CONTROL_TOWER.md  DIRECTORY_LAYOUT.md  Dangerfile.ts  GOLDEN_PATH.md  INTEGRATION_REPORT.md  Makefile  Next_Steps.md  Next_Steps_Log.md  PENDING_WORK.md  PROJECT_STATUS.md  Package.swift  README.md  SECURITY.md  UV_BOOTSTRAP.md  antora-playbook.ci.yml  antora-playbook.local.yml  antora-playbook.test.yml  antora-playbook.yml  biome.json  cli.py  config.markdownlint-cli2.jsonc  cspell.json  docsearch.config.json  generate_script_index.py  justfile  (+19 more)
.dev/: md-reflow.py
.github/: CODEOWNERS  copilot-instructions.md
.husky/: pre-commit
.trunk/: .gitignore  actions  notifications  tools  trunk.yaml
1. Cerebrum Docs/: AI_WORKSPACE_PLAYBOOK.md  DEPENDENCY_MANAGEMENT.md  DOCUMENTATION_MIGRATION_VALIDATION_REPORT.adoc  DOCUMENTATION_MODERNIZATION_PLAN.adoc  HOOKS.md  MODULE_MAP.md  README.md  RENOVATE_SETUP.md  SOP_REALITY_CHECK_AUDIT.adoc  TRUNK_GUIDE.md  VALE_LOCAL_DEV.md  WORKSPACE_MAINTENANCE.md  releases.yaml  workspace-skeleton-migration.md
START HERE/: README.md
agent-scriptbox/: README.md  check-workspace-integrity.mjs  git-force-sync.sh
automation/: requirements-unpinned-allowlist.json  workspace.manifest.json
docs/: PLANNING.md  README.md  VALE_LOCAL_DEV.md  antora.yml  credentials.md  dependency-management.md  mcp-lint-setup.md  (+1 more)
(+737 files in other folders)
